--- a/packages/core/src/localization/en/en.json
+++ b/packages/core/src/localization/en/en.json
@@ -308,8 +308,8 @@
     "Off": "Biometrics Off",
     "EnabledText1": "Unlock the wallet with your phone's biometrics instead of your wallet PIN.",
     "EnabledText2": "Using biometrics means that all fingerprints or face ID added on this phone will have access to your wallet.",
-    "NotEnabledText1": "Biometrics is not currently setup on this device and therefore cannot be enabled.",
-    "NotEnabledText2": "If you wish to enable this feature turn biometrics on in the device settings and then return to this screen.",
+    "NotEnabledText1": "Log in with your phone’s biometrics instead of you wallet PIN",
+    "NotEnabledText2": "This means all fingerprint and/or facial data added on this device can be used to access your ASTI Wallet. <b>Ensure only you can have access to your wallet.</b>",
     "Warning": "Ensure only you have access to your wallet.",
     "UseToUnlock": "Use biometrics to unlock wallet?",
     "UnlockPromptTitle": "Wallet Unlock",
