--- a/packages/core/src/localization/en/en.json
+++ b/packages/core/src/localization/en/en.json
@@ -309,7 +309,7 @@
     "EnabledText1": "Unlock the wallet with your phone's biometrics instead of your wallet PIN.",
     "EnabledText2": "Using biometrics means that all fingerprints or face ID added on this phone will have access to your wallet.",
     "NotEnabledText1": "Log in with your phone’s biometrics instead of you wallet PIN",
-    "NotEnabledText2": "This means all fingerprint and/or facial data added on this device can be used to access your ASTI Wallet. <b>Ensure only you can have access to your wallet.</b>",
+    "NotEnabledText2": "This means all fingerprint and/or facial data added on this device can be used to access your ASTI Wallet.",
     "Warning": "Ensure only you have access to your wallet.",
     "UseToUnlock": "Use biometrics to unlock wallet?",
     "UnlockPromptTitle": "Wallet Unlock",
