--- a/packages/core/src/localization/en/en.json
+++ b/packages/core/src/localization/en/en.json
@@ -208,7 +208,9 @@
         "Paragraph": "Your PIN is an important security feature:",
         "ParagraphList1": "You can use your PIN instead of biometrics to open your wallet",
         "ParagraphList2": "Or use your biometrics to open your wallet, and if your biometrics change change on your device you will need to use the PIN to authenticate your wallet"
-      }
+      },
+      "CreateWallet":"Create a new wallet",
+      "ImportWallet":"I already have a wallet"
     },
     "Message": {
       "CrossPatternValidation": "A pattern of cross was detected in your PIN. Please try again.",
