--- a/packages/core/src/localization/en/en.json
+++ b/packages/core/src/localization/en/en.json
@@ -7,6 +7,7 @@
     "Save": "Save",
     "Confirm": "Confirm",
     "Accept": "Accept",
+    "Agree": "Agree",
     "Reject": "Reject",
     "NotNow": "Not now",
     "Share": "Share",
