--- a/packages/core/src/localization/en/en.json
+++ b/packages/core/src/localization/en/en.json
@@ -172,18 +172,18 @@
     "Attestation": "I have read, understand and accept the terms and conditions."
   },
   "Tour": {
-    "GuideTitle": "Welcome to Aries Bifold",
-    "WouldYouLike": "Would you like some guidance on how to use Aries Bifold?",
+    "GuideTitle": "Welcome to ASTI Wallet",
+    "WouldYouLike": "Would you like to take a tour on how to use ASTI Wallet?",
     "UseAppGuides": "Use app guides",
     "DoNotUseAppGuides": "Don't use app guides",
     "AddAndShare": "Add and share credentials",
-    "AddAndShareDescription": "To add and use credentials you scan a QR code displayed by the service provider.",
+    "AddAndShareDescription": "To add and use credentials, you scan a QR code displayed by the service provider. \n\nYou can also use it to register and log into some service providers.",
     "AddCredentials": "Add credentials",
     "AddCredentialsDescription": "Add credentials by scanning a QR code displayed on the issuer service.",
     "Notifications": "Notifications",
-    "NotificationsDescription": "After you scan a QR code, the credential offer or proof request will appear here, as well as other notable events.",
+    "NotificationsDescription": "After you scan a QR code, the credential offer or proof request will be displayed here, and other notable notifications.",
     "YourCredentials": "Your credentials",
-    "YourCredentialsDescription": "Your added digital credentials appear here. You can review credential details and add and delete credentials.",
+    "YourCredentialsDescription": "Your credentials will be displayed here. You can review the details of your credentials, add or delete credentials.",
     "CredentialOffers": "Credential offers",
     "CredentialOffersDescription": "An organization has offered you a credential. Review the credentials details and choose to accept or decline it. Accepted credentials will be added to your wallet.",
     "ProofRequests": "Proof requests",
